--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,3 @@
-server:
-  port: 8080
 spring:
   application:
     name: healthCare
@@ -16,4 +14,10 @@ spring:
         hibernate.format_sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  main:
+    allow-bean-definition-overriding: true
+    allow-circular-references: true
+  rsocket:
+   server:
+     port: 8080
 
